Update notebook POM version

--- a/docs/examples.ipynb
+++ b/docs/examples.ipynb
@@ -10,7 +10,7 @@
     "<dependency>\n",
     "    <groupId>org.ruivieira</groupId>\n",
     "    <artifactId>java-plotlib</artifactId>\n",
-    "    <version>0.0.6-SNAPSHOT</version>\n",
+    "    <version>0.0.6</version>\n",
     "</dependency>"
    ]
   },
