--- a/docs/examples.ipynb
+++ b/docs/examples.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%loadFromPOM\n",
+   "%%loadFromPOM\n",
+    "<repository>\n",
+    "    <id>bintray-ruivieira-maven</id>\n",
+    "    <url>https://dl.bintray.com/ruivieira/maven</url>\n",
+    "</repository>\n",
     "<dependency>\n",
     "    <groupId>org.ruivieira</groupId>\n",
     "    <artifactId>java-plotlib</artifactId>\n",
